syntax = "proto3";

package org.project_planton.provider.aws.awsec2instance.v1;

// AwsEc2InstanceStackOutputs captures the key output values after provisioning an EC2 instance.
// These outputs include identifiers and network details which can be used to reference the instance in other resources or external systems.
message AwsEc2InstanceStackOutputs {
  // Unique identifier of the EC2 instance (instance ID, e.g., "i-0123456789abcdef0").
  string instance_id = 1;

  // Primary private IPv4 address assigned to the instance.
  string private_ip = 2;

  // Internal DNS hostname for the instance within the VPC.
  string private_dns_name = 3;

  // Availability zone where the instance is running (e.g., "us-west-2a").
  string availability_zone = 4;

  // ARN of the IAM instance profile attached to the instance (if any).
  string instance_profile_arn = 5;

  // Base‑64‑encoded PEM‑formatted private key when the module generates an SSH key pair.
  string ssh_private_key = 6;

  // OpenSSH‑formatted public key corresponding to the generated private key.
  string ssh_public_key = 7;
}
