syntax = "proto3";

package org.project_planton.provider.civo.civofirewall.v1;

import "buf/validate/validate.proto";
import "org/project_planton/shared/foreignkey/v1/foreign_key.proto";

// CivoFirewallSpec defines the user configuration for a Civo firewall.
message CivoFirewallSpec {
  // Name of the firewall (must be unique per Civo account/project).
  string name = 1 [(buf.validate.field).required = true];

  // The network (VPC) in which to create this firewall. Must refer to an existing CivoNetwork.
  org.project_planton.shared.foreignkey.v1.StringValueOrRef network_id = 2 [
    (buf.validate.field).required = true,
    (org.project_planton.shared.foreignkey.v1.default_kind) = CivoVpc,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.network_id"
  ];

  // Inbound (ingress) rules: traffic allowed **to** instances.
  // Any traffic not matching an inbound rule is denied (stateful firewall).
  repeated CivoFirewallInboundRule inbound_rules = 3;

  // Outbound (egress) rules: traffic allowed **from** instances.
  // If no egress rules are specified, all outbound traffic is allowed by default.
  repeated CivoFirewallOutboundRule outbound_rules = 4;

  // Instance tag selectors: names of instance tags to auto-apply this firewall to.
  // Any instance in the same network with any of these tags will use this firewall.
  repeated string tags = 5;
}

// Definition of an inbound (ingress) firewall rule.
message CivoFirewallInboundRule {
  // Protocol to allow ("tcp", "udp", or "icmp").
  string protocol = 1 [(buf.validate.field).string.pattern = "^(tcp|udp|icmp)$"];

  // Port or port range to allow (e.g., "80", "443", "22", "8000-9000"; for "tcp"/"udp"
  // leave empty or use "1-65535" to allow all ports).
  string port_range = 2;

  // CIDR blocks from which traffic is permitted (defaults to "0.0.0.0/0" if not specified).
  repeated string cidrs = 3;

  // Action for this rule: "allow" (default) or "deny". Default is "allow" if unspecified.
  string action = 4;

  // Optional label for the rule (for user reference).
  string label = 5;
}

// Definition of an outbound (egress) firewall rule.
message CivoFirewallOutboundRule {
  // Protocol to allow or deny ("tcp", "udp", or "icmp").
  string protocol = 1 [(buf.validate.field).string.pattern = "^(tcp|udp|icmp)$"];

  // Port or port range to allow/deny (format as in inbound rules).
  string port_range = 2;

  // CIDR blocks to which traffic is permitted (defaults to "0.0.0.0/0" if not specified).
  repeated string cidrs = 3;

  // Action for this rule: "allow" (default) or "deny". Default is "allow" if unspecified.
  string action = 4;

  // Optional label for the rule.
  string label = 5;
}
