syntax = "proto3";

package org.project_planton.provider.civo.civoloadbalancer.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/civo/civoloadbalancer/v1/spec.proto";
import "org/project_planton/provider/civo/civoloadbalancer/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// civo-load-balancer
message CivoLoadBalancer {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'civo.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CivoLoadBalancer'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CivoLoadBalancerSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CivoLoadBalancerStatus status = 5;
}

// civo-load-balancer status
message CivoLoadBalancerStatus {
  //stack-outputs
  //  civo-load-balancer stack-outputs
  CivoLoadBalancerStackOutputs outputs = 1;
}
